discussion/kv_engine/126202/126202_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-38673: get_collections limit view with access control

Collections/Scopes with no privileges should not be visible, when
building the JSON manifest do privilege checks and only include
collections and scopes the user can access.

Change-Id: Ib4fff1057fcdb626917a345821317bba93631cb9

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2020-04-30 14:24:00.000000000
Message: 
Uploaded patch set 8.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-30 14:28:06.000000000
Message: 
Patch Set 8: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27912/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\ep_engine.cc(1794): error C2661: "sendResponse": no overloaded function takes 9 arguments ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27912/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23877/ : FAILURE

CMake error: tlm/cmake/Modules/CBDownloadDeps.cmake:77 (MESSAGE) ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23877/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2043/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/ep_engine.cc:1794:13: error: no matching function for call to "sendResponse" [clang-diagnostic-error]
            sendResponse(makeExitBorderGuard(std::cref(response)),
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/ep_engine.cc:160:26: note: candidate function not viable: requires 8 arguments, but 9 were provided
static ENGINE_ERROR_CODE sendResponse(const AddResponseFn& response,
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/ep_engine.cc:142:26: note: candidate function not viable: requires 8 arguments, but 9 were provided
static ENGINE_ERROR_CODE sendResponse(const AddResponseFn& response,
                         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2043/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/ep_engine.cc:1794:13:
error: no matching function for call to "sendResponse" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2043/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3468/ : FAILURE

Compile error at [2020-04-30T14:25:35.527Z] ../kv_engine/engines/ep/src/ep_engine.cc:1802:32:
error: no matching function for call to ?sendResponse(<lambda(auto:27&&)> [with auto:27 = std::reference_wrapper<const std::function<bool(std::basic_string_view<char>, std::basic_string_view<char>, std::basic_string_view<char>, unsigned char, cb::mcbp::Status, long unsigned int, const void*)> >]::<lambda(auto:28&& ...)>, <brace-enclosed initializer list>, <brace-enclosed initializer list>, std::__cxx11::string&, unsigned int, uint8_t, cb::mcbp::Status&, int, gsl::not_null<const void*>&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3468/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2547/ : FAILURE

Compile error at [2020-04-30T14:26:38.210Z] ../kv_engine/engines/ep/src/ep_engine.cc:1794:13:
error: no matching function for call to "sendResponse"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2547/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3490/ : FAILURE

Compile error at [2020-04-30T14:25:30.054Z] ../kv_engine/engines/ep/src/ep_engine.cc:1802:32:
error: no matching function for call to ?sendResponse(<lambda(auto:27&&)> [with auto:27 = std::reference_wrapper<const std::function<bool(std::basic_string_view<char>, std::basic_string_view<char>, std::basic_string_view<char>, unsigned char, cb::mcbp::Status, long unsigned int, const void*)> >]::<lambda(auto:28&& ...)>, <brace-enclosed initializer list>, <brace-enclosed initializer list>, std::__cxx11::string&, unsigned int, uint8_t, cb::mcbp::Status&, int, gsl::not_null<const void*>&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3490/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3547/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3547/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11338/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/561/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-30 15:35:38.000000000
Message: 
Patch Set 8:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27912/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\ep_engine.cc(1794): error C2661: "sendResponse": no overloaded function takes 9 arguments ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27912/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23877/ : FAILURE

CMake error: tlm/cmake/Modules/CBDownloadDeps.cmake:77 (MESSAGE) ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23877/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2043/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/ep_engine.cc:1794:13: error: no matching function for call to "sendResponse" [clang-diagnostic-error]
            sendResponse(makeExitBorderGuard(std::cref(response)),
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/ep_engine.cc:160:26: note: candidate function not viable: requires 8 arguments, but 9 were provided
static ENGINE_ERROR_CODE sendResponse(const AddResponseFn& response,
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/ep_engine.cc:142:26: note: candidate function not viable: requires 8 arguments, but 9 were provided
static ENGINE_ERROR_CODE sendResponse(const AddResponseFn& response,
                         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2043/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/ep_engine.cc:1794:13:
error: no matching function for call to "sendResponse" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2043/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3468/ : FAILURE

Compile error at [2020-04-30T14:25:35.527Z] ../kv_engine/engines/ep/src/ep_engine.cc:1802:32:
error: no matching function for call to ?sendResponse(<lambda(auto:27&&)> [with auto:27 = std::reference_wrapper<const std::function<bool(std::basic_string_view<char>, std::basic_string_view<char>, std::basic_string_view<char>, unsigned char, cb::mcbp::Status, long unsigned int, const void*)> >]::<lambda(auto:28&& ...)>, <brace-enclosed initializer list>, <brace-enclosed initializer list>, std::__cxx11::string&, unsigned int, uint8_t, cb::mcbp::Status&, int, gsl::not_null<const void*>&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3468/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3490/ : FAILURE

Compile error at [2020-04-30T14:25:30.054Z] ../kv_engine/engines/ep/src/ep_engine.cc:1802:32:
error: no matching function for call to ?sendResponse(<lambda(auto:27&&)> [with auto:27 = std::reference_wrapper<const std::function<bool(std::basic_string_view<char>, std::basic_string_view<char>, std::basic_string_view<char>, unsigned char, cb::mcbp::Status, long unsigned int, const void*)> >]::<lambda(auto:28&& ...)>, <brace-enclosed initializer list>, <brace-enclosed initializer list>, std::__cxx11::string&, unsigned int, uint8_t, cb::mcbp::Status&, int, gsl::not_null<const void*>&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3490/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3547/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3547/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11338/ : FAILURE

Compile error at [2020-04-30T14:27:46.460Z] ../kv_engine/engines/ep/src/ep_engine.cc:1802:32:
error: no matching function for call to ?sendResponse(<lambda(auto:27&&)> [with auto:27 = std::reference_wrapper<const std::function<bool(std::basic_string_view<char>, std::basic_string_view<char>, std::basic_string_view<char>, unsigned char, cb::mcbp::Status, long unsigned int, const void*)> >]::<lambda(auto:28&& ...)>, <brace-enclosed initializer list>, <brace-enclosed initializer list>, std::__cxx11::string&, unsigned int, uint8_t, cb::mcbp::Status&, int, gsl::not_null<const void*>&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11338/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2551/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/561/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
